секция aboutUs: html, css / в процессе

--- a/index.html
+++ b/index.html
@@ -16,31 +16,81 @@
 
   <main class="main">
 
-    <section class="section section-hero hero">
+    <section class="section section-hero">
       <div class="container">
-        <div class="hero__content hero-content">
+        <div class="hero">
 
-          <h1 class="hero-content__title main-title">
+          <h1 class="hero__title main-title">
             Play Real Estate Like a Pro:
           </h1>
 
-          <p class="hero-content__text text">
+          <p class="hero__text text">
             Confident Steps to a Successful Property Purchase in the UAE with Our App!
           </p>
 
-          <div class="hero-content__wrap hero-wrap">
-            <svg class="hero-wrap__iphones icon-svg" width="629" height="700" viewBox="0 0 629 700">
-              <use href="./images/sprite.svg#iphones-hero"></use>
-            </svg>
+          <div class="hero__wrap hero-wrap">
+
+            <div class="hero-wrap__img-iphone">
+              <img class="img-iphone" src="./images/iPhone13.webp" alt="iPhone 13">
+            </div>
+
+            <div class="hero-wrap__img-iphone">
+              <img class="img-iphone" src="./images/iPhone14.webp" alt="iPhone14">
+            </div>
+
           </div>
 
         </div>
       </div>
     </section>
 
-    <section class="section section-intro">
-      <div class="container intro-container">
-        <div class="intro__content intro-content">
+    <section class="section">
+      <div class="container">
+        <div class="aboutUs">
+
+          <div class="aboutUs__content aboutUs-content">
+
+            <h2 class="aboutUs-content__title title">
+              About Us
+            </h2>
+
+            <p class="aboutUs-content__text text">
+              We are a team of dedicated developers who are committed to creating the ultimate real estate buying experience for you.
+            </p>
+
+            <p class="aboutUs-content__text text">
+              With a combined expertise in app development, real estate, and customer service, our talented professionals work tirelessly to bring you a seamless and user-friendly platform. From designinga user-friendly interface to curating a wide selection of properties, our team ensures that every aspect of our app is tailored to meet your needs.
+            </p>
+
+            <p class="aboutUs-content__text text">
+              With a passion for innovation and a drive for excellence, we strive to provide you with a cutting-edge solution that simplifies the process of buying real estate in the UAE.
+            </p>
+
+            <button class="aboutUs-content__btn btn-reset">
+              Say
+              <span class="aboutUs-content__btn--upper">hello</span>
+              <svg class="aboutUs-content__icon icon-svg" width="43" height="43" viewBox="0 0 43 43">
+                <use href="./images/sprite.svg#aboutUS-hand"></use>
+              </svg>
+            </button>
+
+          </div>
+
+          <div class="aboutUs__images aboutUs-images">
+
+            <div class="aboutUs-images__image aboutUs-image">
+              <img class="aboutUs-image__item" src="./images/aboutUs-images-left.webp" alt="Office's people">
+            </div>
+
+            <div class="aboutUs-images__image aboutUs-image">
+              <img class="aboutUs-image__item" src="./images/aboutUs-images-mid.webp" alt="Office's people">
+            </div>
+            
+            <div class="aboutUs-images__image aboutUs-image">
+              <img class="aboutUs-image__item" src="./images/aboutUs-images-right.webp" alt="Office's people">
+            </div>
+
+          </div>
 
         </div>
       </div>
