завершение секции aboutUs

--- a/index.html
+++ b/index.html
@@ -55,15 +55,20 @@
             </h2>
 
             <p class="aboutUs-content__text text">
-              We are a team of dedicated developers who are committed to creating the ultimate real estate buying experience for you.
+              We are a team of dedicated developers who are committed to creating the ultimate real estate buying
+              experience for you.
             </p>
 
             <p class="aboutUs-content__text text">
-              With a combined expertise in app development, real estate, and customer service, our talented professionals work tirelessly to bring you a seamless and user-friendly platform. From designinga user-friendly interface to curating a wide selection of properties, our team ensures that every aspect of our app is tailored to meet your needs.
+              With a combined expertise in app development, real estate, and customer service, our talented
+              professionals work tirelessly to bring you a seamless and user-friendly platform. From designinga
+              user-friendly interface to curating a wide selection of properties, our team ensures that every aspect of
+              our app is tailored to meet your needs.
             </p>
 
             <p class="aboutUs-content__text text">
-              With a passion for innovation and a drive for excellence, we strive to provide you with a cutting-edge solution that simplifies the process of buying real estate in the UAE.
+              With a passion for innovation and a drive for excellence, we strive to provide you with a cutting-edge
+              solution that simplifies the process of buying real estate in the UAE.
             </p>
 
             <button class="aboutUs-content__btn btn-reset">
@@ -83,12 +88,45 @@
             </div>
 
             <div class="aboutUs-images__image aboutUs-image">
-              <img class="aboutUs-image__item" src="./images/aboutUs-images-mid.webp" alt="Office's people">
+              <img class="aboutUs-image__item aboutUs-image__item--hidden" src="./images/aboutUs-images-mid.webp"
+                alt="Office's people">
             </div>
-            
+
             <div class="aboutUs-images__image aboutUs-image">
               <img class="aboutUs-image__item" src="./images/aboutUs-images-right.webp" alt="Office's people">
             </div>
+
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <div class="aboutProject">
+
+          <h2 class="aboutProject__title title">
+            About <span>Pinagora</span>
+          </h2>
+
+          <div class="aboutProject__cards aboutProject-cards">
+
+            <div class="aboutProject-cards__card"></div>
+            <div class="aboutProject-cards__card aboutProject-card">
+
+              <h3 class="aboutProject-card__subtitle subtitle">
+                Wide selection of properties
+              </h3>
+
+              <div class="aboutProject-card__img">
+                
+              </div>
+
+            </div>
+            <div class="aboutProject-cards__card"></div>
+            <div class="aboutProject-cards__text"></div>
+            <div class="aboutProject-cards__card"></div>
 
           </div>
 
