секция aboutProject: html, css / в процессе

--- a/index.html
+++ b/index.html
@@ -107,31 +107,94 @@
         <div class="aboutProject">
 
           <h2 class="aboutProject__title title">
-            About <span>Pinagora</span>
+            About <span class="aboutProject__title--upper">Pinagora</span>
           </h2>
 
           <div class="aboutProject__cards aboutProject-cards">
 
-            <div class="aboutProject-cards__card"></div>
-            <div class="aboutProject-cards__card aboutProject-card">
+            <div class="aboutProject-cards__card aboutProject-card aboutProject-cardLeft">
 
               <h3 class="aboutProject-card__subtitle subtitle">
-                Wide selection of properties
+                User-friendly
+                <br>
+                interface
               </h3>
 
-              <div class="aboutProject-card__img">
-                
+              <div class="aboutProject-card__img aboutProject-cardLeft__img">
+                <img class="img-card__item img-card__item--left" src="./images/project-iphone1.webp" alt="iPhone13">
               </div>
 
             </div>
-            <div class="aboutProject-cards__card"></div>
-            <div class="aboutProject-cards__text"></div>
-            <div class="aboutProject-cards__card"></div>
+
+            <div class="aboutProject-cards__card aboutProject-card aboutProject-cardMidTop">
+
+              <h3 class="aboutProject-card__subtitle subtitle">
+                Wide selection
+                <br>
+                of properties
+              </h3>
+
+              <div class="aboutProject-card__img aboutProject-cardMidTop__img">
+                <img class="img-card__item" src="./images/project-iphone2.webp" alt="iPhone13">
+              </div>
+
+            </div>
+
+            <div class="aboutProject-cards__card aboutProject-card aboutProject-cardRightTop">
+
+              <h3 class="aboutProject-card__subtitle subtitle">
+                Ability to interact
+                <br>
+                with agents
+              </h3>
+
+              <div class="aboutProject-card__img aboutProject-cardRightTop__img">
+                <img class="img-card__item" src="./images/project-iphone3.webp" alt="iPhone13">
+              </div>
+
+            </div>
+
+            <div class="aboutProject-cards__card aboutProject-card aboutProject-card--texts">
+
+              <p class="aboutProject-card__text text">
+                <span class="aboutProject-card__accent">Pinagora</span> real estate purchasing app designed specifically
+                for properties in the UAE. Our app offers a
+                seamless and user-friendly experience, from browsing through a wide selection of properties to providing
+                detailed information and virtual tours.
+              </p>
+
+              <p class="aboutProject-card__text text">
+                With a team of dedicated developers and real estate experts, we have created an innovative platform to
+                simplify the property buying process.
+              </p>
+
+              <p class="aboutProject-card__text text">
+                Experience the ultimate real estate buying journey with our app - your gateway to finding your perfect
+                home in the UAE.
+              </p>
+
+              <button class="aboutProject-card__btn btn-reset">
+                Get Started
+              </button>
+
+            </div>
+
+            <div class="aboutProject-cards__card aboutProject-card aboutProject-cardRightBot">
+
+              <h3 class="aboutProject-card__subtitle subtitle">
+                Real-time updates
+                <br>
+                on property listings
+              </h3>
+
+              <div class="aboutProject-card__img aboutProject-cardRightBot__img">
+                <img class="img-card__item" src="./images/project-iphone4.webp" alt="iPhone13">
+              </div>
+
+            </div>
 
           </div>
-
         </div>
-      </div>
     </section>
 
     <footer class="footer">
