секция FAQ: html, css, спойлеры

--- a/index.html
+++ b/index.html
@@ -197,12 +197,208 @@
         </div>
     </section>
 
+    <section class="section">
+      <div class="container">
+        <div class="problem">
+
+          <h2 class="problem__title title">
+            Problem Statement and Solution Overview:
+          </h2>
+
+          <div class="problem__cards problem-cards">
+
+            <div class="problem-cards__card problem-card">
+
+              <h3 class="problem-card__subtitle subtitle">
+                Lack of transparency in the real estate market:
+              </h3>
+
+              <p class="problem-card__text text">
+                PINAGORA provides users with accurate and up-to-date information about properties for sale in the UAE,
+                helping them make informed decisions.
+              </p>
+
+            </div>
+
+            <div class="problem-cards__card problem-card">
+
+              <h3 class="problem-card__subtitle subtitle">
+                Difficulty in finding the right property:
+              </h3>
+
+              <p class="problem-card__text text">
+                With the help of advanced search filters and algorithms, PINAGORA can match users with properties that
+                meet their specific criteria, making the process of finding the right property much easier.
+              </p>
+
+            </div>
+
+            <div class="problem-cards__card problem-card">
+
+              <h3 class="problem-card__subtitle subtitle">
+                Time-consuming property viewings:
+              </h3>
+
+              <p class="problem-card__text text">
+                By offering virtual property tours and 3D floor plans, our app can allow users to explore properties
+                from the comfort of their own home, saving time and effort on physical viewings.
+              </p>
+
+            </div>
+
+            <div class="problem-cards__card problem-card">
+
+              <h3 class="problem-card__subtitle subtitle">
+                Language barriers:
+              </h3>
+
+              <p class="problem-card__text text">
+                Many expatriates and international buyers in the UAE may face language barriers when dealing with local
+                real estate agents. Our app can provide multilingual support, helping users navigate the purchasing
+                process more effectively.
+              </p>
+
+            </div>
+
+            <div class="problem-cards__card problem-card">
+
+              <h3 class="problem-card__subtitle subtitle">
+                Legal complexities:
+              </h3>
+
+              <p class="problem-card__text text">
+                Purchasing real estate in the UAE can involve a complex legal process that may be confusing for
+                first-time buyers. PINAGORA can provide guidance on legal requirements and connect users with trusted
+                legal advisors to ensure a smooth transaction.
+              </p>
+
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <div class="faq">
+
+          <h2 class="faq__title title">
+            FAQ
+          </h2>
+
+          <div class="spollers">
+
+            <details class="spoller" open="">
+
+              <summary class="spoller__header">
+                <span class="spoller__title title">How can I benefit from using PINAGORA?</span>
+                <svg class="spoller__icon icon-svg" width="16" height="9" viewBox="0 0 16 9">
+                  <use href="./images/sprite.svg#faq-icon"></use>
+                </svg>
+              </summary>
+
+              <div class="spoller__content">
+                <p class="spoller__text text">
+                  Our app offers a wide range of features such as property search based on your preferences, virtual
+                  tours of properties, real-time updates on new listings, and access to expert advice. This makes the
+                  property buying process much easier and more efficient for users.
+                </p>
+              </div>
+
+            </details>
+
+            <details class="spoller" open="">
+
+              <summary class="spoller__header">
+                <span class="spoller__title title">Is it safe to buy property through your app?</span>
+                <svg class="spoller__icon icon-svg" width="16" height="9" viewBox="0 0 16 9">
+                  <use href="./images/sprite.svg#faq-icon"></use>
+                </svg>
+              </summary>
+
+              <div class="spoller__content">
+                <p class="spoller__text text">
+                  Our app offers a wide range of features such as property search based on your preferences, virtual
+                  tours of properties, real-time updates on new listings, and access to expert advice. This makes the
+                  property buying process much easier and more efficient for users.
+                </p>
+              </div>
+
+            </details>
+
+            <details class="spoller" open="">
+
+              <summary class="spoller__header">
+                <span class="spoller__title title">What are the costs associated with buying property in the UAE?</span>
+                <svg class="spoller__icon icon-svg" width="16" height="9" viewBox="0 0 16 9">
+                  <use href="./images/sprite.svg#faq-icon"></use>
+                </svg>
+              </summary>
+
+              <div class="spoller__content">
+                <p class="spoller__text text">
+                  Our app offers a wide range of features such as property search based on your preferences, virtual
+                  tours of properties, real-time updates on new listings, and access to expert advice. This makes the
+                  property buying process much easier and more efficient for users.
+                </p>
+              </div>
+
+            </details>
+
+            <details class="spoller" open="">
+
+              <summary class="spoller__header">
+                <span class="spoller__title title">How can I schedule a viewing for a property listed on your app?</span>
+                <svg class="spoller__icon icon-svg" width="16" height="9" viewBox="0 0 16 9">
+                  <use href="./images/sprite.svg#faq-icon"></use>
+                </svg>
+              </summary>
+
+              <div class="spoller__content">
+                <p class="spoller__text text">
+                  Our app offers a wide range of features such as property search based on your preferences, virtual
+                  tours of properties, real-time updates on new listings, and access to expert advice. This makes the
+                  property buying process much easier and more efficient for users.
+                </p>
+              </div>
+
+            </details>
+
+            <details class="spoller" open="">
+
+              <summary class="spoller__header">
+                <span class="spoller__title title">What should I consider before buying property in the UAE?</span>
+                <svg class="spoller__icon icon-svg" width="16" height="9" viewBox="0 0 16 9">
+                  <use href="./images/sprite.svg#faq-icon"></use>
+                </svg>
+              </summary>
+
+              <div class="spoller__content">
+                <p class="spoller__text text">
+                  Our app offers a wide range of features such as property search based on your preferences, virtual
+                  tours of properties, real-time updates on new listings, and access to expert advice. This makes the
+                  property buying process much easier and more efficient for users.
+                </p>
+              </div>
+
+            </details>
+
+          </div>
+
+        </div>
+      </div>
+    </section>
+
     <footer class="footer">
       <div class="container footer-container">
 
       </div>
     </footer>
   </main>
+
+  <script src="./js/spollers.js"></script>
 
 </body>
 
