секция download: html, css / в процессе

--- a/index.html
+++ b/index.html
@@ -350,7 +350,8 @@
             <details class="spoller" open="">
 
               <summary class="spoller__header">
-                <span class="spoller__title title">How can I schedule a viewing for a property listed on your app?</span>
+                <span class="spoller__title title">How can I schedule a viewing for a property listed on your
+                  app?</span>
                 <svg class="spoller__icon icon-svg" width="16" height="9" viewBox="0 0 16 9">
                   <use href="./images/sprite.svg#faq-icon"></use>
                 </svg>
@@ -386,6 +387,32 @@
             </details>
 
           </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section section-download">
+      <div class="container">
+        <div class="download">
+
+          <h2 class="download__title title">
+            Download PINAGORA
+          </h2>
+
+          <p class="download__text text">
+            Discover the Easiest Way to Find Your Perfect Property in the UAE with Our App!
+          </p>
+
+          <a class="download__link link-reset" href="#">
+            <svg class="download__icon icon-svg" width="392" height="114" viewBox="0 0 392 114">
+              <use href="./images/sprite.svg#app-store"></use>
+            </svg>
+          </a>
+
+          <button class="download__btn btn-reset">
+            Get Started Free
+          </button>
 
         </div>
       </div>
