--- a/index.html
+++ b/index.html
@@ -2,16 +2,20 @@
 <html lang="en">
 
 <head>
+  <title>Pinagora</title>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Pinagora</title>
 
   <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body class="body">
+
   <header class="header">
+
+
+
   </header>
 
   <main class="main">
@@ -293,8 +297,10 @@
             <details class="spoller" open="">
 
               <summary class="spoller__header">
-                <span class="spoller__title title">How can I benefit from using PINAGORA?</span>
-                <svg class="spoller__icon icon-svg" width="16" height="9" viewBox="0 0 16 9">
+                <span class="spoller__title title">
+                  How can I benefit from using PINAGORA?
+                </span>
+                <svg class="spoller__icon icon-svg-fill" width="16" height="9" viewBox="0 0 16 9">
                   <use href="./images/sprite.svg#faq-icon"></use>
                 </svg>
               </summary>
@@ -309,7 +315,7 @@
 
             </details>
 
-            <details class="spoller" open="">
+            <details class="spoller">
 
               <summary class="spoller__header">
                 <span class="spoller__title title">Is it safe to buy property through your app?</span>
@@ -328,7 +334,7 @@
 
             </details>
 
-            <details class="spoller" open="">
+            <details class="spoller">
 
               <summary class="spoller__header">
                 <span class="spoller__title title">What are the costs associated with buying property in the UAE?</span>
@@ -347,7 +353,7 @@
 
             </details>
 
-            <details class="spoller" open="">
+            <details class="spoller">
 
               <summary class="spoller__header">
                 <span class="spoller__title title">How can I schedule a viewing for a property listed on your
@@ -367,7 +373,7 @@
 
             </details>
 
-            <details class="spoller" open="">
+            <details class="spoller">
 
               <summary class="spoller__header">
                 <span class="spoller__title title">What should I consider before buying property in the UAE?</span>
@@ -420,6 +426,8 @@
 
     <footer class="footer">
       <div class="container footer-container">
+
+
 
       </div>
     </footer>
